to push pou itheles. xwris perigrafi commit gia na goustareskeis

--- a/doc/tex/report.tex
+++ b/doc/tex/report.tex
@@ -15,6 +15,16 @@
 \begin{document}
 \maketitle
 \section{Ανάλυση σειριακής έκδοσης}
+
+\begin{center}
+\begin{tabular}{|r|l|}
+    \hline
+    Επίπεδο Βελτιστοποίησης & Χρόνος Εκτέλεσης \\ \hline
+    O0 & 77.5 sec \\
+    O3 & 27.91 sec \\ \hline
+\end{tabular}
+\end{center}
+
 Η συμπεριφορά της σειριακής εκδοσης έγινε με την χρήση του εργαλείου scalasca.
 \begin{center}
 \includegraphics[scale=0.5]{../scrshots/time.png}
@@ -31,7 +41,7 @@
 Συμπεραίνουμε οτι οι περιοχές που προκαλούν καθυστέρηση είναι αυτές που υπολογίζουν κατ' επανάληψη για όλα τα σημεία την απόσταση τους(dist). Αυτό γίνεται για ολα τα σημεία άρα για μεγάλο αριθμό σημείων αυξάνεται και η πολυπλοκοτητα του προγράμματος. Επίσης η δομή που αποθηκεύει τα σημεία δεσμεύεται στην αρχή του προγράμματος στο heap μεσω malloc που δεν εγγυάται ότι οι διευθύνσεις φυσικής μνήμης θα είναι γειτονικες μεταξυ τους. Η πολλαπλή προσπέλαση όλων των σημείων σειριακά οδηγεί στα
 πολλαπλά cache misses. Έτσι η παραλληλοποίηση με openmp βελτιστοποιεί τους υπολογισμούς μειώνοντας τα cache misses.
 
-\section{Παραλληλοποίηση}
+\section{Χρονοβελτίωση}
 \subsection{Με χρήση OpenMP}
 Σύμφωνα με την προηγούμενη ανάλυση, τα σημεία όπου χρειάζεται χρονοβελτίωση είναι κυρίως οι κλήσεις της \texttt{dist} μέσα στις συναρτήσεις \texttt{pgain} και \texttt{pspeedy}.
 
@@ -88,7 +98,7 @@ for ( int k = 0; k < points->num; k++ )  {
 \subsection{Με χρήση εντολών SIMD}
 Λαμβάνοντας υπόψη την ανάλυση της σειριακής έκδοσης του προγράμματος και οι δύο συναρτήσεις σπαταλούν τον μεγαλύτερο χρόνο στην συνάρτηση dist η οποία υπολογίζει την απόσταση δυο σημείων πολλαπλών διαστάσεων.\\
 Ο χρόνος στον οποίο η dist υπολογίζει την απόσταση δυο σημείων μπορεί να βελτιωθεί χρησιμοποιώντας εντολές simd.\\
-Αρχικά υπολογιζώνταν η διαφορά μεταξύ των δύο σημείων σειριακά για κάθε διάστασή τους. Πλέον οι διαστάσεις φορτώνονται ανα 4 ως διάνυσμα σε καταχωρητές του επεξεργαστή έτσι οι πράξεις μεταξύ τους επιταχύνονται.
+Αρχικά υπολογίζονταν η διαφορά μεταξύ των δύο σημείων σειριακά για κάθε διάστασή τους. Πλέον οι τιμές κάθε διάστασης των σημείων φορτώνονται ανα 4 ως διάνυσμα σε καταχωρητές των 128 bit του επεξεργαστή, οι αφαιρέσεις και πολλαπλασιασμοί που χρειάζονται γίνονται ανά 4 και έτσι επιταχύνεται η διαδικασία.
 
 \begin{center}
 \begin{tabular}{|r|c|c|}
@@ -105,6 +115,3 @@ for ( int k = 0; k < points->num; k++ )  {
 
 
 \end{document}
-
-
-
