--- a/doc/tex/report.tex
+++ b/doc/tex/report.tex
@@ -111,7 +111,12 @@ for ( int k = 0; k < points->num; k++ )  {
 \end{center}
 
 \section{Συμπεράσματα}
+Στο παρακάτω διάγραμμα απεικονίζεται συνοπτικά η χρονοβελτίωση των παραπάνω υλοποιήσεων.
+\begin{center}
+\includegraphics{../scrshots/results.png}
+\end{center} 
 
-
+Παρατηρείται ότι στις περιπτώσεις χωρίς βελτιστοποίηση η έκδοση με SIMD είναι πιο αργή σε σχέση με την έκδοση μόνο με openmp. Αν και δεν φαίνεται λογικό εκ πρώτης όψεως, η χειρότερη απόδοση του simd οφείλεται στο ότι έχουν αφαιρεθεί οι βελτιστοποιήσεις του compiler. Σε πραγματικές συνθήκες δεν θα συνέβαινε ποτέ αυτό.\\\\
+Όταν οι βελτιστοποιήσεις του compiler είναι ενεργές, προσθέτοντας simd εντολές στην έκδοση με openMP επιτυγχάνεται περαιτέρω μείωση του χρόνου.\\
 
 \end{document}
