Updated report, cropped pics

--- a/doc/tex/report.tex
+++ b/doc/tex/report.tex
@@ -1,20 +1,30 @@
 %xelatex
-\documentclass{article}
-\usepackage[margin=0.6in]{geometry}
+\documentclass[a4paper,11pt]{article}
+\usepackage[a4paper]{geometry}
 \usepackage{xltxtra}
 \usepackage{xgreek}
 \usepackage{listings}
 \setmainfont[Mapping=tex-text]{Kerkis}
-\usepackage[colorlinks=true,linkcolor=black,urlcolor=blue]{hyperref}
 \title{Παράλληλη επεξεργασία}
-\author{Μπαντολας Πέτρος 5028\\Σειμένης Σπύρος 5070\\Καλλιβωκάς Δημήτριος 4993}
+\author{Μπαντολας Πέτρος 5028\\Σειμένης Σπύρος 5070}
+\date{}
 
-\lstset{columns=flexible}
-\lstset{keepspaces=true}
+\lstset{
+    basicstyle=\footnotesize\ttfamily
+}
 
 \begin{document}
 \maketitle
 \section{Ανάλυση σειριακής έκδοσης}
+
+\begin{itshape}
+    Σε όλες τις μετρήσεις χρησιμοποιήθηκαν οι παράμετροι για την μικρή είσοδο του προγράμματος, δηλαδή
+\end{itshape}
+\begin{lstlisting}
+            10 20 256 32768 32768 1000 none output_small.txt
+\end{lstlisting}
+
+Ο παρακάτω πίνακας αναγράφει τους χρόνους εκτέλεσης του Streamcluster χωρίς καμία τεχνική βελτίωσης.
 
 \begin{center}
 \begin{tabular}{|r|l|}
@@ -25,21 +35,21 @@
 \end{tabular}
 \end{center}
 
-Η συμπεριφορά της σειριακής εκδοσης έγινε με την χρήση του εργαλείου scalasca.
+Η συμπεριφορά της σειριακής εκδοσης αναλύθηκε με την χρήση του εργαλείου scalasca.
 \begin{center}
-\includegraphics[scale=0.5]{../scrshots/time.png}
+\includegraphics[width=\textwidth]{../scrshots/time.png}
 \end{center} 
 Όπως φαινεται και στην εικόνα, οι συναρτήσεις με τον μεγαλύτερο χρόνο εκτέλεσης ειναι η pspeedy και η pgain.\\
 Συγκεκριμένα ο μεγαλύτερος χρόνος και των δύο είναι κατα τις κλήσεις τους στην συνάρτηση dist.
-\subsection{pgain}
+\subsection*{pgain}
 Παρακάτω φαίνονται τα L1, L2, TLB cache misses της σειριακής έκδοσης όπου επι το πλείστον οφείλονται στην pgain.
 \begin{center}
-\includegraphics[scale=0.4]{../scrshots/tlb.png}
-\includegraphics[scale=0.4]{../scrshots/l1.png}
-\includegraphics[scale=0.4]{../scrshots/l2.png}
+\includegraphics[width=\textwidth]{../scrshots/l1.png}
+\includegraphics[width=\textwidth]{../scrshots/l2.png}
+\includegraphics[width=\textwidth]{../scrshots/tlb.png}
 \end{center} 
-Συμπεραίνουμε οτι οι περιοχές που προκαλούν καθυστέρηση είναι αυτές που υπολογίζουν κατ' επανάληψη για όλα τα σημεία την απόσταση τους(dist). Αυτό γίνεται για ολα τα σημεία άρα για μεγάλο αριθμό σημείων αυξάνεται και η πολυπλοκοτητα του προγράμματος. Επίσης η δομή που αποθηκεύει τα σημεία δεσμεύεται στην αρχή του προγράμματος στο heap μεσω malloc που δεν εγγυάται ότι οι διευθύνσεις φυσικής μνήμης θα είναι γειτονικες μεταξυ τους. Η πολλαπλή προσπέλαση όλων των σημείων σειριακά οδηγεί στα
-πολλαπλά cache misses. Έτσι η παραλληλοποίηση με openmp βελτιστοποιεί τους υπολογισμούς μειώνοντας τα cache misses.
+Συμπεραίνουμε οτι οι περιοχές που προκαλούν καθυστέρηση είναι αυτές που υπολογίζουν κατ' επανάληψη για όλα τα σημεία την απόσταση τους (dist). Αυτό γίνεται για ολα τα σημεία, άρα για μεγάλο αριθμό σημείων αυξάνεται και η πολυπλοκοτητα του προγράμματος. Επίσης η δομή που αποθηκεύει τα σημεία δεσμεύεται στην αρχή του προγράμματος στο heap μεσω malloc που δεν εγγυάται ότι οι διευθύνσεις φυσικής μνήμης θα είναι γειτονικες μεταξυ τους. Η πολλαπλή προσπέλαση όλων των σημείων σειριακά οδηγεί στα
+πολλαπλά cache misses. Έτσι η παραλληλοποίηση με OpenMP βελτιστοποιεί τους υπολογισμούς και μειώνει τα cache misses.
 
 \section{Χρονοβελτίωση}
 \subsection{Με χρήση OpenMP}
@@ -85,6 +95,8 @@ for ( int k = 0; k < points->num; k++ )  {
 
 Σε όλες τις παραπάνω περιπτώσεις επιλέχθηκε στατικός διαμοιρασμός των επαναλήψεων στα νήματα, αφού ο φόρτος είναι ο ίδιος σε κάθε περίπτωση (καλείται η συνάρτηση \texttt{dist} με σταθερό πλήθος σημείων).
 
+Ο παρακάτω πίνακας αναγράφει τους χρόνους εκτέλεσης του Streamcluster με χρήση OpenMP.
+
 \begin{center}
 \begin{tabular}{|r|c|c|}
     \hline
@@ -100,6 +112,8 @@ for ( int k = 0; k < points->num; k++ )  {
 Ο χρόνος στον οποίο η dist υπολογίζει την απόσταση δυο σημείων μπορεί να βελτιωθεί χρησιμοποιώντας εντολές simd.\\
 Αρχικά υπολογίζονταν η διαφορά μεταξύ των δύο σημείων σειριακά για κάθε διάστασή τους. Πλέον οι τιμές κάθε διάστασης των σημείων φορτώνονται ανα 4 ως διάνυσμα σε καταχωρητές των 128 bit του επεξεργαστή, οι αφαιρέσεις και πολλαπλασιασμοί που χρειάζονται γίνονται ανά 4 και έτσι επιταχύνεται η διαδικασία.
 
+Ο παρακάτω πίνακας αναγράφει τους χρόνους εκτέλεσης του Streamcluster με χρήση OpenMP και εντολές SIMD.
+
 \begin{center}
 \begin{tabular}{|r|c|c|}
     \hline
@@ -113,10 +127,11 @@ for ( int k = 0; k < points->num; k++ )  {
 \section{Συμπεράσματα}
 Στο παρακάτω διάγραμμα απεικονίζεται συνοπτικά η χρονοβελτίωση των παραπάνω υλοποιήσεων.
 \begin{center}
-\includegraphics{../scrshots/results.png}
+\includegraphics[width=0.9\textwidth]{../scrshots/results.png}
 \end{center} 
 
-Παρατηρείται ότι στις περιπτώσεις χωρίς βελτιστοποίηση η έκδοση με SIMD είναι πιο αργή σε σχέση με την έκδοση μόνο με openmp. Αν και δεν φαίνεται λογικό εκ πρώτης όψεως, η χειρότερη απόδοση του simd οφείλεται στο ότι έχουν αφαιρεθεί οι βελτιστοποιήσεις του compiler. Σε πραγματικές συνθήκες δεν θα συνέβαινε ποτέ αυτό.\\\\
-Όταν οι βελτιστοποιήσεις του compiler είναι ενεργές, προσθέτοντας simd εντολές στην έκδοση με openMP επιτυγχάνεται περαιτέρω μείωση του χρόνου.\\
+Παρατηρείται ότι στις περιπτώσεις χωρίς βελτιστοποίηση η έκδοση με SIMD είναι πιο αργή σε σχέση με την έκδοση μόνο με OpenMP. Αν και δεν φαίνεται λογικό εκ πρώτης όψεως, η χειρότερη απόδοση του SIMD οφείλεται στο ότι έχουν αφαιρεθεί οι βελτιστοποιήσεις του compiler. Σε πραγματικές συνθήκες δεν θα συνέβαινε ποτέ αυτό.
+
+Όταν οι βελτιστοποιήσεις του compiler είναι ενεργές, προσθέτοντας SIMD εντολές στην έκδοση με OpenMP επιτυγχάνεται περαιτέρω μείωση του χρόνου.
 
 \end{document}
