--- a/doc/tex/report.tex
+++ b/doc/tex/report.tex
@@ -37,7 +37,7 @@
 
 Η συμπεριφορά της σειριακής εκδοσης αναλύθηκε με την χρήση του εργαλείου scalasca.
 \begin{center}
-\includegraphics[width=\textwidth]{../scrshots/time.png}
+\includegraphics[scale=0.5]{../scrshots/time.png}
 \end{center} 
 Όπως φαινεται και στην εικόνα, οι συναρτήσεις με τον μεγαλύτερο χρόνο εκτέλεσης ειναι η pspeedy και η pgain.\\
 Συγκεκριμένα ο μεγαλύτερος χρόνος και των δύο είναι κατα τις κλήσεις τους στην συνάρτηση dist.
@@ -45,9 +45,9 @@
 Παρακάτω φαίνονται τα L1, L2, TLB cache misses της σειριακής έκδοσης όπου επι το πλείστον οφείλονται στην pgain.
 \begin{center}
 \includegraphics[width=\textwidth]{../scrshots/l1.png}
+\end{center} 
 \includegraphics[width=\textwidth]{../scrshots/l2.png}
 \includegraphics[width=\textwidth]{../scrshots/tlb.png}
-\end{center} 
 Συμπεραίνουμε οτι οι περιοχές που προκαλούν καθυστέρηση είναι αυτές που υπολογίζουν κατ' επανάληψη για όλα τα σημεία την απόσταση τους (dist). Αυτό γίνεται για ολα τα σημεία, άρα για μεγάλο αριθμό σημείων αυξάνεται και η πολυπλοκοτητα του προγράμματος. Επίσης η δομή που αποθηκεύει τα σημεία δεσμεύεται στην αρχή του προγράμματος στο heap μεσω malloc που δεν εγγυάται ότι οι διευθύνσεις φυσικής μνήμης θα είναι γειτονικες μεταξυ τους. Η πολλαπλή προσπέλαση όλων των σημείων σειριακά οδηγεί στα
 πολλαπλά cache misses. Έτσι η παραλληλοποίηση με OpenMP βελτιστοποιεί τους υπολογισμούς και μειώνει τα cache misses.
 
@@ -123,7 +123,7 @@ for ( int k = 0; k < points->num; k++ )  {
     4 & 29.0 sec & 14.0 sec \\ \hline
 \end{tabular}
 \end{center}
-
+\pagebreak
 \section{Συμπεράσματα}
 Στο παρακάτω διάγραμμα απεικονίζεται συνοπτικά η χρονοβελτίωση των παραπάνω υλοποιήσεων.
 \begin{center}
