Changed the report

--- a/doc/tex/report.tex
+++ b/doc/tex/report.tex
@@ -48,8 +48,7 @@
 \end{center} 
 \includegraphics[width=\textwidth]{../scrshots/l2.png}
 \includegraphics[width=\textwidth]{../scrshots/tlb.png}
-Συμπεραίνουμε οτι οι περιοχές που προκαλούν καθυστέρηση είναι αυτές που υπολογίζουν κατ' επανάληψη για όλα τα σημεία την απόσταση τους (dist). Αυτό γίνεται για ολα τα σημεία, άρα για μεγάλο αριθμό σημείων αυξάνεται και η πολυπλοκοτητα του προγράμματος. Επίσης η δομή που αποθηκεύει τα σημεία δεσμεύεται στην αρχή του προγράμματος στο heap μεσω malloc που δεν εγγυάται ότι οι διευθύνσεις φυσικής μνήμης θα είναι γειτονικες μεταξυ τους. Η πολλαπλή προσπέλαση όλων των σημείων σειριακά οδηγεί στα
-πολλαπλά cache misses. Έτσι η παραλληλοποίηση με OpenMP βελτιστοποιεί τους υπολογισμούς και μειώνει τα cache misses.
+Συμπεραίνουμε οτι οι περιοχές που προκαλούν καθυστέρηση είναι αυτές που υπολογίζουν κατ' επανάληψη για όλα τα σημεία την απόσταση τους (dist). Αυτό γίνεται για ολα τα σημεία, άρα για μεγάλο αριθμό σημείων αυξάνεται και η πολυπλοκοτητα του προγράμματος. Επίσης η δομή που αποθηκεύει τα σημεία δεσμεύεται στην αρχή του προγράμματος στο heap μεσω malloc που δεν εγγυάται ότι οι διευθύνσεις φυσικής μνήμης θα είναι γειτονικες μεταξυ τους. Η πολλαπλή προσπέλαση όλων των σημείων σειριακά οδηγεί στα πολλαπλά cache misses τα οποία επι το πλείστον ειναι cache misses για δεδομένα και οχι για εντολες. Έτσι η παραλληλοποίηση με OpenMP βελτιστοποιεί τους υπολογισμούς και μειώνει τα cache misses.
 
 \section{Χρονοβελτίωση}
 \subsection{Με χρήση OpenMP}
@@ -94,7 +93,8 @@ for ( int k = 0; k < points->num; k++ )  {
 \end{lstlisting}
 
 Σε όλες τις παραπάνω περιπτώσεις επιλέχθηκε στατικός διαμοιρασμός των επαναλήψεων στα νήματα, αφού ο φόρτος είναι ο ίδιος σε κάθε περίπτωση (καλείται η συνάρτηση \texttt{dist} με σταθερό πλήθος σημείων).
-
+Προτού επιχειρηθεί η παραλληλοποίηση του προγράμματος εξετάστηκε η λειτουργία του ώστε να μην επιλεχθούν "τυφλά" τα σημεία που μπορούν να παραλληλοποιηθούν, όπως για παράδειγμα όλα τα loops.
+Έτσι οι παραλληλοποιήσεις που επιλέχθηκαν αρκούν για να επιτύχουν μέγιστη απόδοση απο την παραλληλοποίηση αφού γίνονται στα σημεία που δημιουργούν τον μεγαλύτερο "φόρτο" στο πρόγραμμα.
 Ο παρακάτω πίνακας αναγράφει τους χρόνους εκτέλεσης του Streamcluster με χρήση OpenMP.
 
 \begin{center}
@@ -111,6 +111,7 @@ for ( int k = 0; k < points->num; k++ )  {
 Λαμβάνοντας υπόψη την ανάλυση της σειριακής έκδοσης του προγράμματος και οι δύο συναρτήσεις σπαταλούν τον μεγαλύτερο χρόνο στην συνάρτηση dist η οποία υπολογίζει την απόσταση δυο σημείων πολλαπλών διαστάσεων.\\
 Ο χρόνος στον οποίο η dist υπολογίζει την απόσταση δυο σημείων μπορεί να βελτιωθεί χρησιμοποιώντας εντολές simd.\\
 Αρχικά υπολογίζονταν η διαφορά μεταξύ των δύο σημείων σειριακά για κάθε διάστασή τους. Πλέον οι τιμές κάθε διάστασης των σημείων φορτώνονται ανα 4 ως διάνυσμα σε καταχωρητές των 128 bit του επεξεργαστή, οι αφαιρέσεις και πολλαπλασιασμοί που χρειάζονται γίνονται ανά 4 και έτσι επιταχύνεται η διαδικασία.
+Σε αυτό το σημείο επίσης παρατηρήθηκε ότι συγκεκριμένα οι πράξεις ανάθεσης, αφαίρεσης και πολλαπλασιασμού που πραγματοποιούνται στα δεδομένα, δεν είναι αναγκαίο να γραφτούν ρητά μέσα στο πρόγραμμα με τις έντολες simd που παρέχει ο gcc αφού ο compiler είναι ικανός να αναγνωρίσει τον τύπο δεδομένων και να κάνει μόνος του την εναλλαγή. Αυτό επαληθεύτηκε παρατηρώντας τις εντολές σε assembly που παράγονταν κάθε φορά.
 
 Ο παρακάτω πίνακας αναγράφει τους χρόνους εκτέλεσης του Streamcluster με χρήση OpenMP και εντολές SIMD.
 
@@ -125,13 +126,36 @@ for ( int k = 0; k < points->num; k++ )  {
 \end{center}
 \pagebreak
 \section{Συμπεράσματα}
-Στο παρακάτω διάγραμμα απεικονίζεται συνοπτικά η χρονοβελτίωση των παραπάνω υλοποιήσεων.
+Στο παρακάτω διάγραμμα απεικονίζεται συνοπτικά o χρόνος του προγράμματος για τις διαφορετικες υλοποιήσεις και μεγεθη εισοδου.
 \begin{center}
-\includegraphics[width=0.9\textwidth]{../scrshots/results.png}
+\includegraphics[width=0.9\textwidth]{../scrshots/results1.png}
+\end{center} 
+\begin{center}
+\includegraphics[width=0.9\textwidth]{../scrshots/results2.png}
+\end{center} 
+\begin{center}
+\includegraphics[width=0.9\textwidth]{../scrshots/results3.png}
 \end{center} 
 
-Παρατηρείται ότι στις περιπτώσεις χωρίς βελτιστοποίηση η έκδοση με SIMD είναι πιο αργή σε σχέση με την έκδοση μόνο με OpenMP. Αν και δεν φαίνεται λογικό εκ πρώτης όψεως, η χειρότερη απόδοση του SIMD οφείλεται στο ότι έχουν αφαιρεθεί οι βελτιστοποιήσεις του compiler. Σε πραγματικές συνθήκες δεν θα συνέβαινε ποτέ αυτό.
+Οι χρονοβελτιώσεις υπολογίζονται για καθε περίπτωση ώς εξής:
+$$ {serial time with O0}/{omp time/simd O0} $$
+για τις υλοποιήσεις με Ο0 και αντίστοιχα
+$$ {serial time with O3}/{omp time/simd O3} $$
+για τις υλοποιήσεις με Ο3.
+\begin{center}
+\includegraphics[width=0.9\textwidth]{../scrshots/speedup1.png}
+\end{center} 
+\begin{center}
+\includegraphics[width=0.9\textwidth]{../scrshots/speedup2.png}
+\end{center} 
+\begin{center}
+\includegraphics[width=0.9\textwidth]{../scrshots/speedup3.png}
+\end{center} 
+
+Παρατηρείται ότι στις περιπτώσεις χωρίς βελτιστοποίηση compiler η έκδοση με SIMD είναι πιο αργή σε σχέση με την έκδοση μόνο με OpenMP. Αν και δεν φαίνεται λογικό εκ πρώτης όψεως, η χειρότερη απόδοση του SIMD οφείλεται στο ότι έχουν αφαιρεθεί οι βελτιστοποιήσεις του compiler. Σε πραγματικές συνθήκες δεν θα συνέβαινε ποτέ αυτό.
 
 Όταν οι βελτιστοποιήσεις του compiler είναι ενεργές, προσθέτοντας SIMD εντολές στην έκδοση με OpenMP επιτυγχάνεται περαιτέρω μείωση του χρόνου.
+
+Απο τα συγκριτικά στις γραφικές παραστάσεις για τις χρονοβελτιώσεις παρατηρείται ότι οι χρονοβελτιώσεις για Ο0 είναι υψηλότερες απο αυτές με Ο3 ενεργό. 
 
 \end{document}
