--- a/doc/askisi2.tex
+++ b/doc/askisi2.tex
@@ -49,7 +49,7 @@
 Μόλις δώσει όλες τις πίτσες της σε ψήστες βγαίνει απο το loop ανεξαρτήτως αν έχει τελειώσει το ψήσιμο και περιμένει τους ψήστες(παιδιά της) να τελειώσουν με join. Μόλις όλοι οι ψήστες τελειώσουν ακολουθείται η ίδια διαδικασία για την ανάθεση σε delivery (χωρίς το loop προφανώς).
 Μόλις κάνει join και τον deliverά ακυρώνει το thread καθυστέρησης και διαγράφει την παραγγελία απο την λίστα.
 
-\subsubsection{Baker/delivery process}
+\subsubsection{Baker/delivery thread}
 \label{baker}
 Το thread του baker με αυτό του delivery είναι πανομοιότυπα 
 και ο μόνος λόγος που είναι ξεχωριστές συναρτήσεις είναι για να είναι πιο ξεκάθαρο.
